testing z-index android bug

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -86,6 +86,7 @@ li
 	transition: height .3s
 	width: 100%
 	z-index: 20
+	-webkit-transform: translateZ(20)
 	.icon-logo
 		vertical-align middle
 		display inline-block
@@ -185,6 +186,7 @@ li
 		top: 0
 		width: 60px
 		z-index: 10
+		-webkit-transform: translateZ(10)
 	.icon-left
 		background-image: linear-gradient(left, rgba(color.main, 1) 65%, rgba(color.main, 0) 100%)
 		left: 0
